# joyc

./: .gitignore  CMakeLists.txt  README.md  build.sh  help.h  main.c  main.cpp
core/: CMakeLists.txt  init.c  logger.cpp  logger.h
logic/: CMakeLists.txt  error.c  error.h  output.h
src/: CMakeLists.txt  log.c  log.h
